<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Lab6</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>server</module>
        <module>client</module>
        <module>common</module>
    </modules>

    <properties>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

    <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.11.0</version>
    </dependency>

    <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline</artifactId>
        <version>3.26.1</version>
    </dependency>

    <dependency>
        <groupId>org.xerial</groupId>
        <artifactId>sqlite-jdbc</artifactId>
        <version>3.45.3.0</version>
    </dependency>
</dependencies>

    <build>
        <plugins>
	    <plugin>
   	         <groupId>org.apache.maven.plugins</groupId>
   		 <artifactId>maven-compiler-plugin</artifactId>
   		 <version>3.11.0</version>
   	 	    <configuration>
       		        <source>26</source>
        		<target>26</target>
        		<compilerArgs>--enable-preview</compilerArgs>
    		    </configuration>
	    </plugin>

	    <plugin>
        	<groupId>org.apache.maven.plugins</groupId>
        	<artifactId>maven-surefire-plugin</artifactId>
        	<version>3.2.5</version>
        	<configuration>
            	    <argLine>--enable-preview --enable-final-field-mutation=ALL-UNNAMED</argLine>
        	</configuration>
    	    </plugin>
        </plugins>
    </build>

</project>
